<!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<resources>
    <string name="app_name">New York Times Project</string>
    <string name="image_description">Image Description</string>
    <string name="connection_error_title">Connection Issue</string>
    <string name="connection_error_message">Unable to connect to the Internet. Please check your connection</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_share">Share</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_save">Save</string>
    <string name="text_begin_date">Begin Date</string>
    <string name="text_sort_order">Sort Order</string>
    <string name="text_news_desk_values">News Desk Values</string>
    <string name="text_arts">Arts</string>
    <string name="text_fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="text_sports">Sports</string>
    <string name="text_advanced_search_filters">Advanced Search Filters</string>
    <string name="text_no_more_data">There is no more data for loading</string>
    <string-array name="spinner_sort_order">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>
