<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/activity_padding_message">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/activity_vertical_padding"
                    android:paddingTop="@dimen/activity_vertical_padding"
                    android:text="@string/text_begin_date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/activity_vertical_padding"
                    android:paddingTop="@dimen/activity_vertical_padding"
                    android:text="@string/text_sort_order" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/text_news_desk_values" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:weightSum="5">

                <EditText
                    android:id="@+id/editTaskStartedSelect"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:hint=""
                    android:paddingBottom="@dimen/activity_vertical_padding"
                    android:paddingTop="@dimen/activity_vertical_padding" />

                <Spinner
                    android:id="@+id/spinnerSortOrder"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/activity_vertical_padding"
                    android:paddingTop="@dimen/activity_vertical_padding" />

                <CheckBox
                    android:id="@+id/checkedTextViewArts"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/text_arts" />

                <CheckBox
                    android:id="@+id/checkedTextViewFashionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/text_fashion_style" />

                <CheckBox
                    android:id="@+id/checkedTextViewSports"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/text_sports" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/activity_padding_message"
            android:text="@string/button_save"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>